# fastapi-error-map

./: .gitignore  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml  test-compatibility.yaml
examples/: errors.py  main.py
src/fastapi_error_map/: __init__.py  error_handling.py  openapi.py  routing.py  rules.py  translator_policy.py  translators.py
tests/integration/: test_example.py  test_routing.py
tests/unit/: error_stubs.py  test_error_handling.py  test_openapi.py  test_rules.py  test_translators.py  translator_stubs.py
