[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[project]
name = "fastapi-error-map"
version = "0.9.6"
description = "Elegant per-endpoint error handling for FastAPI that keeps OpenAPI in sync"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ivan Borovets", email = "ivan.r.borovets@gmail.com" }
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.100.0",
    "orjson>=3.8.4",
]

[project.urls]
Homepage = "https://github.com/ivan-borovets/fastapi-error-map"
Repository = "https://github.com/ivan-borovets/fastapi-error-map"

[project.optional-dependencies]
dev = [
    "mypy==1.8.0",
    "pre-commit==4.2.0",
    "ruff==0.11.2",
]
test = [
    "coverage==7.10.1",
    "httpx==0.28.1",
    "nox==2025.5.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
]
publish = [
    "hatch==1.14.1",
]
examples = [
    "uvicorn==0.35.0",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    "if __name__ == .__main__.:",
    '@(abc\.)?abstractmethod',
    "pass",
    '\.\.\.',
    "from .*",
    "import .*",
    'logging\..*',
    'log\..*',
]

[tool.coverage.run]
source = ["src", ]
omit = [
    "**/__init__.py",
]
concurrency = [
    "multiprocessing",
    "thread",
]
parallel = true
branch = true

[tool.mypy]
files = [
    "examples",
    "src",
    "tests",
]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
disallow_untyped_defs = false
plugins = [
    "pydantic.mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests", ]
markers = ["slow", ]
addopts = "-m 'not slow'"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
preview = true  # experimental

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A", # flake8-builtins            https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ARG", # flake8-unused-arguments  https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "ASYNC", # flake8-async           https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B", # flake8-bugbear             https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4", # flake8-comprehensions     https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C90", # mccabe                   https://docs.astral.sh/ruff/rules/#mccabe-c90
    #    "COM", # flake8-commas            https://docs.astral.sh/ruff/rules/#flake8-commas-com
    # Incompatible with ruff formatter, but can be useful (uncomment once, then review changes)
    # See: https://github.com/astral-sh/ruff/issues/9216
    "DTZ", # flake8-datetimez         https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "E", # pycodestyle-error          https://docs.astral.sh/ruff/rules/#error-e
    "ERA001", # commented-out-code    https://docs.astral.sh/ruff/rules/#eradicate-era
    "F", # pyflakes                   https://docs.astral.sh/ruff/rules/#pyflakes-f
    "FLY", # flynt                    https://docs.astral.sh/ruff/rules/#flynt-fly
    "I", # isort                      https://docs.astral.sh/ruff/rules/#isort-i
    "LOG", # flake8-logging           https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "N", # pep8-naming                https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PERF", # Perflint                https://docs.astral.sh/ruff/rules/#perflint-perf
    "PL", # pylint                    https://docs.astral.sh/ruff/rules/#pylint-pl
    "PT", # flake8-pytest-style       https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH", # flake8-use-pathlib       https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "Q", # flake8-quotes              https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RET", # flake8-return (RET)      https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE", # flake8-raise (RSE)       https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RUF", # Ruff-specific rules      https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "S", # flake8-bandit              https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM", # flake8-simplify          https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLF", # flake8-self (SLF)        https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SLOT", # flake8-slots            https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "T20", # flake8-print             https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "TCH", # flake8-type-checking     https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "TID", # flake8-tidy-imports      https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "UP", # pyupgrade                 https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W", # pycodestyle-warning        https://docs.astral.sh/ruff/rules/#warning-w
]
ignore = [
    "PLR6301", # no-self-use
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG002", # unused-method-argument
    "PLR2004", # magic-value-comparison
    "S101", # assert
]
"examples/errors.py" = [
    "T201", # print
]
"src/fastapi_error_map/error_handling.py" = [
    "PLR0913", # too-many-arguments
]
"src/fastapi_error_map/routing.py" = [
    "B008", # function-call-in-default-argument
    "PLR0913", # too-many-arguments
    "UP006", # non-pep585-annotation
    "UP035", # deprecated-import
]
"src/fastapi_error_map/translators.py" = [
    "ARG002", # unused-method-argument
]

[tool.slotscheck]
strict-imports = true
